v4: add diagrams and new code for lab 3

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,16 @@
     </nav>
 
     <div class="container mt-4">
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <label for="dataType" class="form-label">Select Data Type:</label>
+                <select id="dataType" class="form-select">
+                    <option value="personal" selected>Personal Data</option>
+                    <option value="it">IT Data (Computers & Projects)</option>
+                </select>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-md-12">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -69,3 +79,4 @@
     <script src="static/script.js"></script>
 </body>
 </html>
+
